# GHCore

./: .gitignore  CMakeLists.txt  README.md
Include/GHCore/: GHCore.hpp
Include/GHCore/Hooks/: DetourHook.hpp  IatHook.hpp  VmtHook.hpp
Include/GHCore/Memory/: Memory.hpp  Scan.hpp
Include/GHCore/Process/: Process.hpp
Include/GHCore/Utils/: Utils.hpp
examples/: CMakeLists.txt  main.cpp
src/: main.cpp
src/Inject/: Inject.hpp
src/example/: main.cpp
